@@ -4,26 +4,35 @@ import com.mojang.blaze3d.systems.RenderSystem;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.client.gui.components.Button;
-import net.minecraft.client.gui.screens.inventory.AbstractContainerScreen;
+import net.minecraft.client.gui.components.Tooltip;
+import net.minecraft.client.gui.navigation.ScreenPosition;
+import net.minecraft.client.gui.screens.inventory.AbstractRecipeBookScreen;
+import net.minecraft.client.gui.screens.recipebook.CraftingRecipeBookComponent;
+import net.minecraft.client.renderer.RenderType;
 import net.minecraft.client.resources.language.I18n;
 import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.entity.player.Inventory;
 import net.minecraft.world.inventory.Slot;
 import net.minecraft.world.item.ItemStack;
-import twilightforest.TFConfig;
+import net.neoforged.neoforge.network.PacketDistributor;
 import twilightforest.TwilightForestMod;
-import twilightforest.data.tags.ItemTagGenerator;
+import twilightforest.config.TFConfig;
+import twilightforest.tags.TFItemTags;
 import twilightforest.inventory.UncraftingMenu;
-import twilightforest.network.TFPacketHandler;
 import twilightforest.network.UncraftingGuiPacket;
 
-public class UncraftingScreen extends AbstractContainerScreen<UncraftingMenu> {
-
+public class UncraftingScreen extends AbstractRecipeBookScreen<UncraftingMenu> {
 	private static final ResourceLocation TEXTURE = TwilightForestMod.getGuiTexture("guigoblintinkering.png");
 
 	public UncraftingScreen(UncraftingMenu container, Inventory player, Component name) {
-		super(container, player, name);
+		super(container, new CraftingRecipeBookComponent(container), player, name);
+	}
+
+	@Override
+	protected ScreenPosition getRecipeBookButtonPosition() {
+		return new ScreenPosition(this.leftPos + 145, this.topPos + 7);
 	}
 
 	@Override
@@ -31,66 +40,66 @@ public class UncraftingScreen extends AbstractContainerScreen<UncraftingMenu> {
 		super.init();
 
 		this.addRenderableWidget(new CycleButton(this.leftPos + 40, this.topPos + 22, true, button -> {
-			TFPacketHandler.CHANNEL.sendToServer(new UncraftingGuiPacket(0));
+			PacketDistributor.sendToServer(new UncraftingGuiPacket(0));
 			this.menu.unrecipeInCycle++;
 			this.menu.slotsChanged(this.menu.tinkerInput);
-		}));
+		}, Component.translatable("container.twilightforest.uncrafting_table.cycle_next_uncraft")));
 		this.addRenderableWidget(new CycleButton(this.leftPos + 40, this.topPos + 55, false, button -> {
-			TFPacketHandler.CHANNEL.sendToServer(new UncraftingGuiPacket(1));
+			PacketDistributor.sendToServer(new UncraftingGuiPacket(1));
 			this.menu.unrecipeInCycle--;
 			this.menu.slotsChanged(this.menu.tinkerInput);
-		}));
+		}, Component.translatable("container.twilightforest.uncrafting_table.cycle_back_uncraft")));
 
-		//this.buttonList.add(new ModeButton(uiLeft + 7, guiTop + 57));
-
-		this.addRenderableWidget(new CycleButtonMini(this.leftPos + 27, this.topPos + 56, true, button -> {
-			TFPacketHandler.CHANNEL.sendToServer(new UncraftingGuiPacket(2));
-			this.menu.ingredientsInCycle++;
-			this.menu.slotsChanged(this.menu.tinkerInput);
-		}));
-		this.addRenderableWidget(new CycleButtonMini(this.leftPos + 27, this.topPos + 63, false, button -> {
-			TFPacketHandler.CHANNEL.sendToServer(new UncraftingGuiPacket(3));
-			this.menu.ingredientsInCycle--;
-			this.menu.slotsChanged(this.menu.tinkerInput);
-		}));
-
-		//this.buttonList.add(new RefreshButton(uiLeft + 26, guiTop + 57));
+		if (!TFConfig.disableIngredientSwitching) {
+			this.addRenderableWidget(new CycleButtonMini(this.leftPos + 27, this.topPos + 56, true, button -> {
+				PacketDistributor.sendToServer(new UncraftingGuiPacket(2));
+				this.menu.ingredientsInCycle++;
+				this.menu.slotsChanged(this.menu.tinkerInput);
+			}, Component.translatable("container.twilightforest.uncrafting_table.cycle_next_ingredient")));
+			this.addRenderableWidget(new CycleButtonMini(this.leftPos + 27, this.topPos + 63, false, button -> {
+				PacketDistributor.sendToServer(new UncraftingGuiPacket(3));
+				this.menu.ingredientsInCycle--;
+				this.menu.slotsChanged(this.menu.tinkerInput);
+			}, Component.translatable("container.twilightforest.uncrafting_table.cycle_back_ingredient")));
+		}
 
 		this.addRenderableWidget(new CycleButton(this.leftPos + 121, this.topPos + 22, true, button -> {
-			TFPacketHandler.CHANNEL.sendToServer(new UncraftingGuiPacket(4));
+			PacketDistributor.sendToServer(new UncraftingGuiPacket(4));
 			this.menu.recipeInCycle++;
-			this.menu.slotsChanged(this.menu.assemblyMatrix);
-		}));
+			this.menu.slotsChanged(this.menu.getCraftSlots());
+		}, Component.translatable("container.twilightforest.uncrafting_table.cycle_next_recipe")));
 		this.addRenderableWidget(new CycleButton(this.leftPos + 121, this.topPos + 55, false, button -> {
-			TFPacketHandler.CHANNEL.sendToServer(new UncraftingGuiPacket(5));
+			PacketDistributor.sendToServer(new UncraftingGuiPacket(5));
 			this.menu.recipeInCycle--;
-			this.menu.slotsChanged(this.menu.assemblyMatrix);
-		}));
+			this.menu.slotsChanged(this.menu.getCraftSlots());
+		}, Component.translatable("container.twilightforest.uncrafting_table.cycle_back_recipe")));
 	}
 
 	@Override
-	public boolean mouseScrolled(double x, double y, double direction) {
-		boolean scrolled = super.mouseScrolled(x, y, direction);
+	public boolean mouseScrolled(double x, double y, double vertScroll, double horizScroll) {
+		boolean scrolled = super.mouseScrolled(x, y, vertScroll, horizScroll);
 
 		//ingredient buttons
-		if (x > this.leftPos + 27 && x < this.leftPos + 33 && y > this.topPos + 56 && y < this.topPos + 69) {
-			if (direction > 0) {
-				TFPacketHandler.CHANNEL.sendToServer(new UncraftingGuiPacket(2));
-				this.menu.ingredientsInCycle++;
-			} else {
-				TFPacketHandler.CHANNEL.sendToServer(new UncraftingGuiPacket(3));
-				this.menu.ingredientsInCycle--;
+		if (!TFConfig.disableIngredientSwitching) {
+			if (x > this.leftPos + 27 && x < this.leftPos + 33 && y > this.topPos + 56 && y < this.topPos + 69) {
+				if (vertScroll > 0) {
+					PacketDistributor.sendToServer(new UncraftingGuiPacket(2));
+					this.menu.ingredientsInCycle++;
+				} else {
+					PacketDistributor.sendToServer(new UncraftingGuiPacket(3));
+					this.menu.ingredientsInCycle--;
+				}
+				this.menu.slotsChanged(this.menu.tinkerInput);
 			}
-			this.menu.slotsChanged(this.menu.tinkerInput);
 		}
 
 		//uncrafting recipe buttons
 		if (x > this.leftPos + 40 && x < this.leftPos + 54 && y > this.topPos + 22 && y < this.topPos + 64) {
-			if (direction > 0) {
-				TFPacketHandler.CHANNEL.sendToServer(new UncraftingGuiPacket(0));
+			if (vertScroll > 0) {
+				PacketDistributor.sendToServer(new UncraftingGuiPacket(0));
 				this.menu.unrecipeInCycle++;
 			} else {
-				TFPacketHandler.CHANNEL.sendToServer(new UncraftingGuiPacket(1));
+				PacketDistributor.sendToServer(new UncraftingGuiPacket(1));
 				this.menu.unrecipeInCycle--;
 			}
 			this.menu.slotsChanged(this.menu.tinkerInput);
@@ -98,30 +107,23 @@ public class UncraftingScreen extends AbstractContainerScreen<UncraftingMenu> {
 
 		//recrafting recipe buttons
 		if (x > this.leftPos + 121 && x < this.leftPos + 135 && y > this.topPos + 22 && y < this.topPos + 64) {
-			if (direction > 0) {
-				TFPacketHandler.CHANNEL.sendToServer(new UncraftingGuiPacket(4));
+			if (vertScroll > 0) {
+				PacketDistributor.sendToServer(new UncraftingGuiPacket(4));
 				this.menu.recipeInCycle++;
 			} else {
-				TFPacketHandler.CHANNEL.sendToServer(new UncraftingGuiPacket(5));
+				PacketDistributor.sendToServer(new UncraftingGuiPacket(5));
 				this.menu.recipeInCycle--;
 			}
-			this.menu.slotsChanged(this.menu.assemblyMatrix);
+			this.menu.slotsChanged(this.menu.getCraftSlots());
 		}
 
 		return scrolled;
 	}
 
 	@Override
-	public void render(GuiGraphics graphics, int mouseX, int mouseY, float partialTicks) {
-		this.renderBackground(graphics);
-		super.render(graphics, mouseX, mouseY, partialTicks);
-		this.renderTooltip(graphics, mouseX, mouseY); //renderHoveredToolTip
-	}
-
-	@Override
 	protected void renderLabels(GuiGraphics graphics, int mouseX, int mouseY) {
 		graphics.drawString(this.font, this.title, 6, 6, 4210752, false);
-		if (TFConfig.COMMON_CONFIG.UNCRAFTING_STUFFS.disableUncraftingOnly.get()) {
+		if (TFConfig.disableUncraftingOnly) {
 			graphics.drawString(this.font, Component.translatable("container.twilightforest.uncrafting_table.uncrafting_disabled").withStyle(ChatFormatting.DARK_RED), 6, this.imageHeight - 96 + 2, 4210752, false);
 		} else {
 			graphics.drawString(this.font, I18n.get("container.inventory"), 7, this.imageHeight - 96 + 2, 4210752, false);
@@ -130,9 +132,9 @@ public class UncraftingScreen extends AbstractContainerScreen<UncraftingMenu> {
 
 	@Override
 	protected void renderBg(GuiGraphics graphics, float partialTicks, int mouseX, int mouseY) {
-		int frameX = (this.width - this.imageWidth) / 2;
+		int frameX = this.leftPos;
 		int frameY = (this.height - this.imageHeight) / 2;
-		graphics.blit(TEXTURE, frameX, frameY, 0, 0, this.imageWidth, this.imageHeight);
+		graphics.blit(RenderType::guiTextured, TEXTURE, frameX, frameY, 0, 0, this.imageWidth, this.imageHeight, 256, 256);
 
 		UncraftingMenu tfContainer = this.menu;
 
@@ -205,19 +207,21 @@ public class UncraftingScreen extends AbstractContainerScreen<UncraftingMenu> {
 		}
 
 		//check if we're hovering over a banned uncraftable item
-		if (container.slots.get(0).hasItem() && container.slots.get(0).getItem().is(ItemTagGenerator.BANNED_UNCRAFTABLES) && container.slots.get(0).equals(hoveredSlot)) {
+		if (container.slots.getFirst().hasItem() && container.slots.getFirst().getItem().is(TFItemTags.BANNED_UNCRAFTABLES) && container.slots.getFirst().equals(this.hoveredSlot)) {
 			graphics.renderTooltip(this.font, Component.translatable("container.twilightforest.uncrafting_table.disabled_item").withStyle(ChatFormatting.RED), pX, pY);
 		} else {
 			super.renderTooltip(graphics, pX, pY);
 		}
 	}
 
+	//TODO convert to sprites
 	private static class CycleButton extends Button {
 		private final boolean up;
 
-		CycleButton(int x, int y, boolean up, OnPress onClick) {
+		CycleButton(int x, int y, boolean up, OnPress onClick, MutableComponent tooltip) {
 			super(x, y, 14, 9, Component.empty(), onClick, message -> Component.empty());
 			this.up = up;
+			this.setTooltip(Tooltip.create(tooltip));
 		}
 
 		@Override
@@ -233,7 +237,7 @@ public class UncraftingScreen extends AbstractContainerScreen<UncraftingMenu> {
 				// what's up
 				if (!this.up) textureY += this.height;
 
-				graphics.blit(TEXTURE, this.getX(), this.getY(), textureX, textureY, this.width, this.height);
+				graphics.blit(RenderType::guiTextured, TEXTURE, this.getX(), this.getY(), textureX, textureY, this.width, this.height, 256, 256);
 			}
 		}
 	}
@@ -241,9 +245,10 @@ public class UncraftingScreen extends AbstractContainerScreen<UncraftingMenu> {
 	private static class CycleButtonMini extends Button {
 		private final boolean up;
 
-		CycleButtonMini(int x, int y, boolean up, OnPress onClick) {
+		CycleButtonMini(int x, int y, boolean up, OnPress onClick, MutableComponent tooltip) {
 			super(x, y, 8, 6, Component.empty(), onClick, message -> Component.empty());
 			this.up = up;
+			this.setTooltip(Tooltip.create(tooltip));
 		}
 
 		@Override
@@ -259,7 +264,7 @@ public class UncraftingScreen extends AbstractContainerScreen<UncraftingMenu> {
 				// what's up
 				if (!this.up) textureY += this.height;
 
-				graphics.blit(TEXTURE, this.getX(), this.getY(), textureX, textureY, this.width, this.height);
+				graphics.blit(RenderType::guiTextured, TEXTURE, this.getX(), this.getY(), textureX, textureY, this.width, this.height, 256, 256);
 			}
 		}
 	}
